cmake_minimum_required(VERSION 3.10)
project(ch3)

find_package(OpenCV REQUIRED)

set(CMAKE_CXX_STANDARD 17)

include_directories(/usr/local/include ./include)

add_executable(ch3 main.cpp rasterizer.hpp rasterizer.cpp global.hpp Triangle.hpp Triangle.cpp Texture.hpp Texture.cpp Shader.hpp OBJ_Loader.h)
target_link_libraries(ch3 ${OpenCV_LIBRARIES})
#target_compile_options(ch3 PUBLIC -Wall -Wextra -pedantic)
